[package]
name = "gateway"
description = "Gateway"
version = "0.1.0"
authors = ["Perry Birch <perrybirch@vizidrix.com>"]
publish = false

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
mockito = "0.22.0"
serde = "1.0"
url = { git = "https://github.com/servo/rust-url" }

[features]
mockito-enabled = []

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"